--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <p>or</p>
                         <p>Sign with</p>
                         <div class="icons">
-                            <a href="#"><img id="facebook" src="images/20673.png" alt="#"></a>
-                            <a href="#"><img id="google" src="images/720255.png" alt="#"></a>
+                            <a href="https://www.facebook.com/"><img id="facebook" src="images/20673.png" alt="#"></a>
+                            <a href="https://www.gmail.com/"><img id="google" src="images/720255.png" alt="#"></a>
                         </div>
                         <p>Already a member?<a href="#">Sign In</a></p>
                 </form>
@@ -49,7 +49,10 @@
             <div class="footer"></div>
         </div>
         <div class="rightBox">
-            <img src="images/odin-lined.png" alt="#">
+            <div class="backgroundLogo">
+                <img id="odinLogo" src="images/odin-lined.png" alt="#">
+            </div>
+           
             <div class="textAlready">Already have an accout?</div>
             <div class="textB"></div>
             <button id="signIn">Sign In</button>
